--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
     background: linear-gradient(to right, rgb(120, 111, 121) 10%,rgb(236, 224, 171));
     width: 100%;
-    min-height:100vh;
     margin: 0; 
     overflow: hidden;   
     text-align: center;
@@ -10,9 +9,9 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .calc{
-    margin: 17vw auto;
-    width: 40vw;
-    height: 57vw;
+    margin: 1.7vw auto;
+    width: 30vw;
+    height: 40vw;
     background: gray;
     border: solid 0.1vw black;
     border-radius: 1vw;
@@ -20,16 +19,16 @@ body{
 .screen{
     border-radius: 0.5vw;
     border: black solid 0.1vw;
-    width: 38vw;
-    margin: 1vw;
+    width: 28vw;
+    margin: 0.9vw;
 
 }
 .disp{
-    width: 36vw;
-    height: 8vw;
+    width: 26vw;
+    height: 6.5vw;
     background: white;
     text-align: right;
-    font-size: 4vw;
+    font-size: 3.1vw;
     padding: 1vw;
     overflow: hidden;
     word-wrap: break-word;
@@ -38,12 +37,13 @@ body{
     border-radius: 0 0 0.5vw 0.5vw;
 }
 .disp1{
-    width: 36vw;
-    height: 5vw;
+    width: 26vw;
+    height: 2.2vw;
     background: white;
     text-align: right;
-    font-size: 3vw;
+    font-size: 2vw;
     padding: 1vw;
+    background: r;
     overflow: hidden;
     word-wrap: break-word;
     word-break: break-all;
@@ -54,20 +54,92 @@ body{
 .pad{
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    row-gap: 1vw;
-    column-gap: 1vw;
+    row-gap: 0.7vw;
+    column-gap: 0.4vw;
     grid-template-rows: repeat(5,1fr);
-    margin: 1vw;
+    margin: 0.9vw;
 }
 .num{
-    width: 8.76vw;
-    height: 6.5vw;
-    font-size: 3vw;
+    width: 6.57vw;
+    height: 4.4vw;
+    font-size: 2.25vw;
     border: solid black 0.1vw;
     border-radius: 0.5vw;
     background-color: darkgrey;
-    box-shadow: 0.2vw 0.2vw 0.4vw 0.2vw rgb(117, 115, 115);
+    box-shadow: 0.15vw 0.15vw 0.3vw 0.15vw rgb(117, 115, 115);
 }
 button:active{
     background: rgb(92, 91, 91);
+}
+@media screen and (max-width:900px) {
+    body{
+        background: linear-gradient(to right, rgb(120, 111, 121) 10%,rgb(236, 224, 171));
+        width: 100%;
+        min-height:100vh;
+        margin: 0; 
+        overflow: hidden;  
+        font-size: 7vw; 
+    }
+    .calc{
+        margin: 17vw auto 5vw auto;
+        width: 80vw;
+        height: 114vw;
+        background: gray;
+        border: solid 0.2vw black;
+        border-radius: 2vw;
+    }
+    .screen{
+        border-radius: 1vw;
+        border: black solid 0.2vw;
+        width: 76vw;
+        margin: 2vw;
+    
+    }
+    .disp{
+        width: 72vw;
+        height: 16vw;
+        background: white;
+        text-align: right;
+        font-size: 8vw;
+        padding: 2vw;
+        overflow: hidden;
+        word-wrap: break-word;
+        word-break: break-all;
+        font-family: Gotham Rounded, sans-serif;
+        border-radius: 0 0 1vw 1vw;
+    }
+    .disp1{
+        width: 72vw;
+        height: 10vw;
+        background: white;
+        text-align: right;
+        font-size: 6vw;
+        padding: 2vw;
+        overflow: hidden;
+        word-wrap: break-word;
+        word-break: break-all;
+        font-family: Gotham Rounded, sans-serif;
+        color: rgb(102, 101, 101);
+        border-radius: 1vw 1vw 0 0;
+    }
+    .pad{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        row-gap: 2vw;
+        column-gap: 2vw;
+        grid-template-rows: repeat(5,1fr);
+        margin: 2vw;
+    }
+    .num{
+        width: 17.52vw;
+        height: 13vw;
+        font-size: 6vw;
+        border: solid black 0.2vw;
+        border-radius: 1vw;
+        background-color: darkgrey;
+        box-shadow: 0.2vw 0.2vw 0.4vw 0.2vw rgb(117, 115, 115);
+    }
+    button:active{
+        background: rgb(92, 91, 91);
+    }
 }
